Test/git-issues/git-issue-276a.dfy.expect
git-issue-276a.dfy(5,30): Error: Divide by zero in compiler constant expression
git-issue-276a.dfy(23,10): Info: newtype c0 resolves as {:nativeType "byte"} (Detected Range: 0 .. 100)
git-issue-276a.dfy(25,10): Info: newtype c1 resolves as {:nativeType "byte"} (Detected Range: 0 .. 100)
git-issue-276a.dfy(26,10): Info: newtype c2 resolves as {:nativeType "byte"} (Detected Range: 0 .. 50)
1 resolution/type errors detected in git-issue-276a.dfy
